# rootops-aegis-defense-ai

./: .gitignore  LICENSE  README.md  REPOSITORY_INFO.md  pyproject.toml  requirements.txt
config/: agent.yaml  agent_competition_example.yaml  agent_execute_example.yaml  agent_gpt_file_example.yaml  agent_linux_drone_competition_example.yaml  central_policy_example.json  central_policy_example.yaml  policy.yaml  policy_competition_example.yaml  policy_linux_drone_competition_example.yaml  signatures.yaml
deploy/: aegis-agent.service  aegis-central.service
docs/: ALL_IN_ONE_COMPETITION_INSTALL.md  ARCHITECTURE.md  AUDITD_FIM.md  BETA_RELEASE_NOTES.md  CENTRAL_UI.md  DRONE_NETWORK_GUARD.md  EVIDENCE_CHAIN_PRECISION.md  OPERATIONAL_HARDENING.md  OPERATIONS_RUNBOOK.md  REAL_ENFORCEMENT.md  SECRETS.md  SIGNATURE_PATTERN_LOOP.md  V0_2_10_RELEASE_NOTES.md  V0_2_11_RELEASE_NOTES.md  V0_2_12_RELEASE_NOTES.md  V0_2_13_RELEASE_NOTES.md  V0_2_14_RELEASE_NOTES.md  V0_2_15_CHAMPIONSHIP_MODE.md  V0_2_16_CHAMPIONSHIP_RELIABILITY.md  V0_2_3_SECURITY_PATCH.md  V0_3_0_FINAL_COMPETITION_EDITION.md  V0_3_1_LIVE_BATTLE_EVIDENCE.md  VALIDATION.md  VALIDATION_RESULT.txt
sample_data/: network.txt  processes.txt
scripts/: aegis_all_in_one_check.sh  aegis_championship_mode.sh  aegis_competition_emergency_stop.sh  aegis_competition_status.sh  all_in_one_competition_install.sh  bootstrap_nftables.sh  create_openai_key_file.sh  diagnose_ai_connectivity.sh  export_competition_evidence.sh  generate_proof_report.sh  install.sh  install_auditd_rules.sh  install_central_service.sh  run_dryrun.sh  (+10 more)
(+75 files in other folders)
